--- a/comicagg/media/css/gray_white.css
+++ b/comicagg/media/css/gray_white.css
@@ -100,6 +100,10 @@ input[type="submit"]:active, button:active {
 /* Vista de lectura */
 /********************/
 
+#avisos {
+	border-left-color:#666;
+	border-right-color:#666;
+}
 
 #navigation_box {
   background: top left no-repeat #F2F2F2;
