--- a/comicagg/media/css/green_white.css
+++ b/comicagg/media/css/green_white.css
@@ -100,6 +100,10 @@ input[type="submit"]:active, button:active {
 /* Vista de lectura */
 /********************/
 
+#avisos {
+	border-left-color:#6C945D;
+	border-right-color:#6C945D;
+}
 
 #navigation_box {
   background: top left no-repeat #F2FFF0;
