--- a/comicagg/templates/base/agregator/comic_list.html
+++ b/comicagg/templates/base/agregator/comic_list.html
@@ -1,47 +1,70 @@
 {% extends 'base.html' %}
 {% load i18n agregator_tags %}
+
+{% block head %}<script src="{{ mediaurl }}js/comiclist.js" type="text/javascript"></script>{% endblock %}
+{% block onload %}init(){% endblock %}
 {% block title %}{% trans 'Full list'%}{% endblock %}
 {% block content %}
 <div id="comic_list">
 	<h3>{% trans 'This are all the comics in the database' %}</h3>
-	<h4>{% trans 'Jump to:' %}</h4>
-  <div class="jumpto"><a href="#active">{% trans 'Active comics' %}</a>, <a href="#inactive">{% trans 'inactive comics' %}</a>, <a href="#ended">{% trans 'ended comics' %}</a>.</div>
-  <h4 id="active">{% trans 'Active comics' %} <span class="small_text">({{ list|length }} comic{{ list|length|pluralize }})</span></h4>
-{% if tag %}<h5>{% trans "Filtering with tag " %} <b><i>{{ tag }}</i></b> (<a href="{% url comic_list %}">{% trans "remove filter" %}</a>)</h5>{% endif %}
-  <h5>{% trans "Tag cloud" %}</h5>
-  <div class="cloud text_center">
+	<h4 class="jumpto">{% trans 'Jump to:' %}</h4>
+	<div class="jumpto"><a href="#active">{% trans 'Active comics' %}</a>, <a href="#inactive">{% trans 'inactive comics' %}</a>, <a href="#ended">{% trans 'ended comics' %}</a>.</div>
+	<h4 id="active">{% trans 'Active comics' %} <span class="small_text">({{ list|length }} comic{{ list|length|pluralize }})</span></h4>
+	<h5>{% trans "Tag cloud" %}</h5>
+	<div class="cloud text_center">
 {% for tag in tags %}
-    <a href="{% url view_tag tag=tag.name|urlencode %} " class="tag_size{{ tag.font_size }}">{{ tag.name }}</a> 
+		<a href="{% url view_tag tag=tag.name|urlencode %} " class="tag_size{{ tag.font_size }}">{{ tag.name }}</a> 
 {% endfor %}
-  </div>
-  <h5>{% trans 'Sorted by' %} {% ifequal sortedby "name" %}{% trans 'name' %}{% endifequal %}{% ifequal sortedby "rating" %}{% trans 'rating' %}{% endifequal %}{% ifequal sortedby "readers" %}{% trans 'readers' %}{% endifequal %}</h5>
-  <div class="info">
-    <span class="small_text">{% trans 'Sort by:' %} <a href="{% if tag %}{% url view_tag tag %}{% else %}{% url comic_list %}{% endif %}">{% trans 'name' %}</a>, <a href="{% if tag %}{% url view_tag_sorted tag,"rating" %}{% else %}{% url comic_list_sorted sortby="rating" %}{% endif %}">{% trans 'rating' %}</a>, <a href="{% if tag %}{% url view_tag_sorted tag,"readers" %}{% else %}{% url comic_list_sorted sortby="readers" %}{% endif %}">{% trans 'readers' %}</a></span>
-  </div>
-  <ul class="active_comics">
+	</div>
+	<h5>{% trans 'Sorted by' %} {% ifequal sortedby "name" %}{% trans 'name' %}{% endifequal %}{% ifequal sortedby "rating" %}{% trans 'rating' %}{% endifequal %}{% ifequal sortedby "readers" %}{% trans 'readers' %}{% endifequal %}{% if tag %} {% trans "and filtering with the tag " %} <b><i>{{ tag }}</i></b> (<a href="{% url comic_list %}">{% trans "remove filter" %}</a>){% endif %}</h5>
+	<div class="info">
+		<span class="small_text">{% trans 'Sort by:' %} <a href="{% if tag %}{% url view_tag tag %}{% else %}{% url comic_list %}{% endif %}">{% trans 'name' %}</a>, <a href="{% if tag %}{% url view_tag_sorted tag,"rating" %}{% else %}{% url comic_list_sorted sortby="rating" %}{% endif %}">{% trans 'rating' %}</a>, <a href="{% if tag %}{% url view_tag_sorted tag,"readers" %}{% else %}{% url comic_list_sorted sortby="readers" %}{% endif %}">{% trans 'readers' %}</a></span>
+	</div>
+  <div class="active_comics">
 {% for comic in list %}
-	<li id="comic{{ comic.id }}" class="comic">{% spaceless %}
-		<img src="{{ mediaurl }}images/menu_on.png" alt="open"/> {{ comic.name }} <span class="small_text">({{ comic.subscription_set.count}} {% trans "readers" %}, {{ comic.getRating }}% {% trans 'rating'%}, {{ comic.votes }} {% trans 'vote' %}{{ comic.votes|pluralize }}, {{ comic.positivevotes|toint }}% {% trans 'positive' %})</span>
-	{% endspaceless %}</li>
+	<div id="comic{{ comic.id }}" class="comic">{% spaceless %}
+		<span class="button">
+			<img style="display:none" id="error{{ comic.id }}" src="{{ mediaurl }}images/remove12.png" alt="error"/>
+			<img style="display:none" id="loading{{ comic.id }}" src="{{ mediaurl }}images/loading12.gif" alt="loading"/>
+			<img id="menuoff{{ comic.id }}" src="{{ mediaurl }}images/menu_off.png" alt="open"/>
+			<img style="display:none" id="menuon{{ comic.id }}" src="{{ mediaurl }}images/menu_on.png" alt="close"/>
+		</span>
+		{{ comic.name }}
+		<span class="small_text">({{ comic.subscription_set.count}} {% trans "readers" %}, {{ comic.getRating }}% {% trans 'rating'%}, {{ comic.votes }} {% trans 'vote' %}{{ comic.votes|pluralize }}, {{ comic.positivevotes|toint }}% {% trans 'positive' %})</span>
+	{% endspaceless %}</div>
 {% endfor %}
-  </ul>
-  <h4 id="inactive">{% trans 'Inactive comics' %} <span class="small_text">({{ inactive_list|length }} comic{{ inactive_list|length|pluralize }})</span></h4>
-  <p class="info">{% trans "This comics are inactive in the database. That means that even though they were added to the database they were found not to work properly and therefore they were deactivated. In the future they may be active again."%}</p>
-  <ul class="inactive_comics">
+	</div>
+	<h4 id="inactive">{% trans 'Inactive comics' %} <span class="small_text">({{ inactive_list|length }} comic{{ inactive_list|length|pluralize }})</span></h4>
+	<p class="info">{% trans "This comics are inactive in the database. That means that even though they were added to the database they were found not to work properly and therefore they were deactivated. In the future they may be active again."%}</p>
+	<div class="inactive_comics">
 {% for comic in inactive_list %}
-	<li id="comic{{ comic.id }}" class="comic">{% spaceless %}
-		<img src="{{ mediaurl }}images/menu_on.png" alt="open"/> {{ comic.name }} <span class="small_text">({{ comic.getRating }}% {% trans 'rating'%}, {{ comic.votes }} {% trans 'votes' %}, {{ comic.positivevotes|toint }}% {% trans 'positive' %})</span>
-	{% endspaceless %}</li>
+	<div id="comic{{ comic.id }}" class="comic">{% spaceless %}
+		<span class="button">
+			<img style="display:none" id="error{{ comic.id }}" src="{{ mediaurl }}images/remove12.png" alt="error"/>
+			<img style="display:none" id="loading{{ comic.id }}" src="{{ mediaurl }}images/loading12.gif" alt="loading"/>
+			<img id="menuoff{{ comic.id }}" src="{{ mediaurl }}images/menu_off.png" alt="open"/>
+			<img style="display:none" id="menuon{{ comic.id }}" src="{{ mediaurl }}images/menu_on.png" alt="close"/>
+		</span>
+		{{ comic.name }}
+		<span class="small_text">({{ comic.getRating }}% {% trans 'rating'%}, {{ comic.votes }} {% trans 'vote' %}{{ comic.votes|pluralize }}, {{ comic.positivevotes|toint }}% {% trans 'positive' %})</span>
+	{% endspaceless %}</div>
 {% endfor %}
-  </ul>
-  <h4 id="ended">{% trans 'Ended comics' %} <span class="small_text">({{ ended_list|length }} comic{{ ended_list|length|pluralize }})</span></h4>
-  <p class="info">{% trans "Either <i>The End</i> was written in their last strip or the author decided to put the comic in an indefinite hiatus so there won't be more updates anytime soon. We don't like to delete comics from the database so they will be kept here so they won't fade away in History."%}</p>
-  <ul class="ended_comics">
+	</div>
+	<h4 id="ended">{% trans 'Ended comics' %} <span class="small_text">({{ ended_list|length }} comic{{ ended_list|length|pluralize }})</span></h4>
+	<p class="info">{% trans "Either <i>The End</i> was written in their last strip or the author decided to put the comic in an indefinite hiatus so there won't be more updates anytime soon. We don't like to delete comics from the database so they will be kept here so they won't fade away in History."%}</p>
+	<div class="ended_comics">
 {% for comic in ended_list %}
-	<li id="comic{{ comic.id }}" class="comic">{% spaceless %}
-		<img src="{{ mediaurl }}images/menu_on.png" alt="open"/> {{ comic.name }} <span class="small_text">({{ comic.getRating }}% {% trans 'rating'%}, {{ comic.votes }} {% trans 'votes' %}, {{ comic.positivevotes|toint }}% {% trans 'positive' %})</span>
-	{% endspaceless %}</li>
+	<div id="comic{{ comic.id }}" class="comic">{% spaceless %}
+		<span class="button">
+			<img style="display:none" id="error{{ comic.id }}" src="{{ mediaurl }}images/remove12.png" alt="error"/>
+			<img style="display:none" id="loading{{ comic.id }}" src="{{ mediaurl }}images/loading12.gif" alt="loading"/>
+			<img id="menuoff{{ comic.id }}" src="{{ mediaurl }}images/menu_off.png" alt="open"/>
+			<img style="display:none" id="menuon{{ comic.id }}" src="{{ mediaurl }}images/menu_on.png" alt="close"/>
+		</span>
+		{{ comic.name }}
+		<span class="small_text">({{ comic.getRating }}% {% trans 'rating'%}, {{ comic.votes }} {% trans 'vote' %}{{ comic.votes|pluralize }}, {{ comic.positivevotes|toint }}% {% trans 'positive' %})</span>
+	{% endspaceless %}</div>
 {% endfor %}
-  </ul>
+  </div>
 </div>
 {% endblock %}
