--- a/comicagg/templates/base/base.html
+++ b/comicagg/templates/base/base.html
@@ -19,28 +19,29 @@
     <script src="{{ mediaurl }}js/functions.js" type="text/javascript"></script>
 <!--     <script src="http://www.savethedevelopers.org/say.no.to.ie.6.js" type="text/javascript"></script> -->
     <script type="text/javascript">
-    var url_hide_new_comics = '{% url hide_new_comics %}';
-    var url_hide_new_blogs = '{% url hide_new_blogs %}';
-    var url_forget_new_blogs = '{% url forget_new_blogs %}';
-	 var url_forget_new_comics = '{% url forget_new_comics %}';
-	 var url_forget_new_comics_quick = '{% url forget_new_comics_quick %}';
-	 var url_rate = '{% url rate %}';
-    var url_mark_as_read = '{% url mark_read %}';
-    var url_save_tags = '{% url save_tags %}';
-    var url_configure = '{% url configure %}';
-    var url_save_selection = '{% url save_selection %}';
-    var url_error = '{{ mediaurl }}images/error.png';
-    var url_loading = '{{ mediaurl }}images/loading.gif';
-    var url_add = '{% url add_comic_ajax %}';
-    var url_remove = '{% url remove_comic_ajax %}';
-    var url_report = '{% url report_comic %}';
-    var url_comic_list = '{% url comic_list %}';
-    var media_url = '{{ mediaurl }}';
-    var css_blue_white = '{{ mediaurl }}css/blue_white.css';
-    var css_green_white = '{{ mediaurl }}css/green_white.css';
-    var css_gray_white = '{{ mediaurl }}css/gray_white.css';
-    var css_red_white = '{{ mediaurl }}css/red_white.css';
-    var url_save_color = '{% url save_color %}';
+	var url_hide_new_comics = '{% url hide_new_comics %}';
+	var url_hide_new_blogs = '{% url hide_new_blogs %}';
+	var url_forget_new_blogs = '{% url forget_new_blogs %}';
+	var url_forget_new_comics = '{% url forget_new_comics %}';
+	var url_forget_new_comics_quick = '{% url forget_new_comics_quick %}';
+	var url_rate = '{% url rate %}';
+	var url_mark_as_read = '{% url mark_read %}';
+	var url_save_tags = '{% url save_tags %}';
+	var url_configure = '{% url configure %}';
+	var url_save_selection = '{% url save_selection %}';
+	var url_error = '{{ mediaurl }}images/error.png';
+	var url_loading = '{{ mediaurl }}images/loading.gif';
+	var url_add = '{% url add_comic_ajax %}';
+	var url_remove = '{% url remove_comic_ajax %}';
+	var url_report = '{% url report_comic %}';
+	var url_comic_list = '{% url comic_list %}';
+	var url_comic_list_load = '{% url comic_list_load %}';
+	var media_url = '{{ mediaurl }}';
+	var css_blue_white = '{{ mediaurl }}css/blue_white.css';
+	var css_green_white = '{{ mediaurl }}css/green_white.css';
+	var css_gray_white = '{{ mediaurl }}css/gray_white.css';
+	var css_red_white = '{{ mediaurl }}css/red_white.css';
+	var url_save_color = '{% url save_color %}';
     </script>
 {% block head %}{% endblock %}
     <meta name="verify-v1" content="hBaNfvYp/n/LvW10Xls13fEw74DAzWDpd66RyCdhVHQ=" />
