--- a/comicagg/templates/base/agregator/read.html
+++ b/comicagg/templates/base/agregator/read.html
@@ -37,15 +37,15 @@
 {% if list %}
 	{# list es una lista de unread_comic #}
 	{% for item in list %}
-		<a href="{{ comic.website }}" onclick="return abrirWeb('{{ comic.website|safe }}')"><img id="img_unread{{ item.id}}" src="{{ mediaurl }}images/loading.gif" alt="{{ comic.name }}"/></a><br/>
+		<a href="{{ comic.website }}" onclick="return abrirWeb('{{ comic.website|safe }}')"><img id="img_unread{{ item.id}}" src="{{ mediaurl }}images/loading.gif" alt="{{ comic.name }}" title="{{ item.history.alt_text }}"/></a><br/>
 	{% endfor %}
 {# el usuario no tiene comics nuevos #}
 {% else %}
 	{% if user.get_profile.hide_read %}
 		{# para la lista de url de los comics leidos #}
-		<a href="{{ comic.website }}" onclick="return abrirWeb('{{ comic.website|safe }}')"><img id="img_read{{ comic.id }}" src="{{ mediaurl }}images/loading.gif" alt="{{ comic.name }}"/></a>
+		<a href="{{ comic.website }}" onclick="return abrirWeb('{{ comic.website|safe }}')"><img id="img_read{{ comic.id }}" src="{{ mediaurl }}images/loading.gif" alt="{{ comic.name }}" title="{{ comic.last_image_alt_text }}" /></a>
 	{% else %}
-		<a href="{{ comic.website }}" onclick="return abrirWeb('{{ comic.website|safe }}')"><img id="img_read{{ comic.id }}" src="{{ mediaurl }}images/loading.gif" alt="{{ comic.name }}" /></a>
+		<a href="{{ comic.website }}" onclick="return abrirWeb('{{ comic.website|safe }}')"><img id="img_read{{ comic.id }}" src="{{ mediaurl }}images/loading.gif" alt="{{ comic.name }}" title="{{ comic.last_image_alt_text }}" /></a>
 	{% endif %}
 {% endif %}
     <div class="comic_info">
