--- a/comicagg/media/css/v2009/base.css
+++ b/comicagg/media/css/v2009/base.css
@@ -1,7 +1,7 @@
 /* Roger Shah presents Magic Island - Music for Balearic People Episode 061 */
 body {
 	font-family:sans-serif;
-	font-size:10pt;
+	font-size:9pt;
 	color:#333;
 	padding:0;
 	margin:0;
@@ -74,6 +74,7 @@ a:visited {
 }
 
 /* Login views */
+
 .loginbox {
 	border:1px gray solid;
 	-moz-border-radius:15px;
@@ -103,7 +104,13 @@ a:visited {
 	border-width:2px;
 }
 
+#errorContainer {
+	border:1px solid red;
+	background-color:#ffcccc;
+	padding:3px;
+}
 /* Read page */
+
 .comic {
 	border:1px solid gray;
 	background-color:white;
@@ -114,6 +121,7 @@ a:visited {
 .comic h3 {
 	margin:0;
 	padding:0;
+	font-size:larger;
 }
 .comic .striplist {
 	margin:5px auto 5px auto;
@@ -137,3 +145,4 @@ a:visited {
 	margin:0;
 	padding:0;
 }
+
