--- a/comicagg/templates/v2009/base.html
+++ b/comicagg/templates/v2009/base.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" href="{{ mediaurl }}images/favicon.png" type="image/png" />
 		<script src="{{ mediaurl }}js/lib/prototype.js" type="text/javascript"></script>
 		<script src="{{ mediaurl }}js/lib/scriptaculous.js" type="text/javascript"></script>
-		<script src="{{ mediaurl }}js/v2009/functions.js" type="text/javascript"></script>
+		<script src="{{ mediaurl }}js/v2009/all.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			var url_hide_new_comics = '{% url hide_new_comics %}';
 			var url_hide_new_blogs = '{% url hide_new_blogs %}';
@@ -35,12 +35,13 @@
 			var css_red_white = '{{ mediaurl }}css/red_white.css';
 			var url_save_color = '{% url save_color %}';
 		</script>
+{% block extra_head %}{% endblock %}
 	</head>
 	<body onload="{% block onload %}{% endblock %}">
 		<div id="head">
 			{% if user.is_authenticated %}
 			<div id="head_right">
-				<i><b>{{ user.username }}</b></i> | {% trans "profile "%} | {% trans "help" %} | {% trans "news" %} | {% trans "logout" %}
+				<i><b>{{ user.username }}</b></i> | {% trans "profile "%} | {% trans "help" %} | {% trans "news" %} | <a href="{% url logout %}">{% trans "logout" %}</a>
 			</div>
 			<div id="head_left">
 				Comics: <a href="{% url read %}">{% trans "read" %}<span id="menuUnreadCounter"></span></a> | <a href="{% url configure %}">{% trans "choose" %}</a> | {% trans "request" %} | <a href="{% url comic_list %}">{% trans "list" %}</a>
