--- a/comicagg/templates/v2009/registration/login_form.html
+++ b/comicagg/templates/v2009/registration/login_form.html
@@ -8,7 +8,7 @@
 	<h3>{% trans 'Login into your account'%}</h3>
 	<p>{% trans 'Write your username and passwod to get you logged in.'%}</p>
 	{% if error %}
-	<p id="errorContainer">{{ error }}</p>
+	<p><span id="errorContainer">{{ error }}</p>
 	{% endif %}
 	<div class="text_left">
 		<div id="error"></div>
@@ -29,6 +29,6 @@
 		</form>
 	</div>
 	<p>{% trans "Don't you have an account?" %} <a href="{% url register %}">{% trans "Create a one." %}</a></p>
-	<p>{% trans "Can't remember your password?" %} <a href="{% url reset_password %}">{% trans 'Reset my password.'%}</a></p>
+	<p>{% trans "Can't remember your password?" %} <a href="{% url reset_password %}">{% trans 'Send me a new password.'%}</a></p>
 </div>
 {% endblock %}
